Fix icon alignment in list page component.

--- a/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.css
+++ b/myreader-frontend/src/app/js/shared/component/list-page/list-page.component.css
@@ -1,6 +1,6 @@
 .my-list-page__action-panel {
+    align-items: center;
     display: flex;
-    flex-direction: row;
 }
 
 .my-list-page__search-action {
